@startuml island1
!pragma useIntermediatePackages false

class island1.Animal {
  island: None
  name: None
  x: None
  y: None
}
class island1.Island {
  grid_size: None
  grid: None
}
class island1.Predator {
}
class island1.Prey {
}
island1.Animal <|-- island1.Predator
island1.Animal <|-- island1.Prey
footer Generated by //test//
@enduml

